# home-server

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  renovate.json
.github/workflows/: deploy-template.yml  deploy.yml
scripts/: write-env-kv.sh
secrets/: check-secrets.sh  downloads-secrets-kv.sh
src/: main.rs
tests/: netdata.sh
