[package]
name = "docker-kv-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_identity = "0.13.0"
azure_security_keyvault = "0.13.0"
clap = { version = "4.3.22", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
url = "2.4.0"
